fix ribbon flow
