# docs/swagger.yaml
@@ -4962,47 +4962,6 @@ paths:
       summary: Get qc-ribbon counts per day for current month
       tags:
       - ribbons
-  /api/ribbons/ribbon-flow/{tracking}:
-    get:
-      consumes:
-      - application/json
-      description: Get the complete flow tracking through ribbon process (qc-ribbon
-        -> outbound -> order).
-      parameters:
-      - description: Tracking number
-        in: path
-        name: tracking
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/utilities.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/controllers.RibbonFlowResponse'
-              type: object
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/utilities.Response'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/utilities.Response'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/utilities.Response'
-      security:
-      - BearerAuth: []
-      summary: Get ribbon flow tracking
-      tags:
-      - ribbons
   /api/ribbons/ribbon-flows:
     get:
       consumes:
@@ -5059,6 +5018,47 @@ paths:
       security:
       - BearerAuth: []
       summary: Get all ribbon flows
+      tags:
+      - ribbons
+  /api/ribbons/ribbon-flows/{tracking}:
+    get:
+      consumes:
+      - application/json
+      description: Get the complete flow tracking through ribbon process (qc-ribbon
+        -> outbound -> order).
+      parameters:
+      - description: Tracking number
+        in: path
+        name: tracking
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/utilities.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/controllers.RibbonFlowResponse'
+              type: object
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/utilities.Response'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/utilities.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/utilities.Response'
+      security:
+      - BearerAuth: []
+      summary: Get ribbon flow tracking
       tags:
       - ribbons
   /api/stores:
